--- a/Notebooks/Plot&Stats_BoxPlots.ipynb
+++ b/Notebooks/Plot&Stats_BoxPlots.ipynb
@@ -566,7 +566,7 @@
         "import time\n",
         "\n",
         "# Parameters to adapt in function of the notebook section\n",
-        "base_folder = \"Results_Folder/Plots\"  # Change to your actual folder path\n",
+        "base_folder = f\"{Results_Folder}/Plots\"  # Change to your actual folder path\n",
         "Conditions = 'Condition'\n",
         "df_to_plot = dataset_df  # Change to your actual dataframe variable\n",
         "\n",
@@ -637,7 +637,8 @@
         "    return logged_matrix\n",
         "\n",
         "def plot_heatmap(ax, matrix, title, cmap='viridis'):\n",
-        "    \"\"\"Plot a heatmap with logarithmic scaling of p-values and real p-values as annotations.\"\"\"\n",
+        "    \"\"\"Plot a heatmap with logarithmic scaling of p-values and real p-values as annotations.\n",
+        "    Skip annotations if there are more than 7 conditions.\"\"\"\n",
         "    log_matrix = safe_log10_p_values(matrix.fillna(1))\n",
         "\n",
         "    # Define the normalization range\n",
@@ -647,8 +648,12 @@
         "    if vmin > vmax:\n",
         "        vmin = vmax\n",
         "\n",
-        "    # Format annotations\n",
-        "    formatted_annotations = matrix.applymap(lambda x: format_p_value(x) if pd.notna(x) else \"NaN\")\n",
+        "    # Format annotations if conditions are 6 or fewer\n",
+        "    num_conditions = len(matrix.columns)\n",
+        "    if num_conditions <= 7:\n",
+        "        formatted_annotations = matrix.applymap(lambda x: format_p_value(x) if pd.notna(x) else \"NaN\")\n",
+        "    else:\n",
+        "        formatted_annotations = False  # No annotations\n",
         "\n",
         "    # Plot the heatmap without the color bar\n",
         "    heatmap = sns.heatmap(log_matrix, ax=ax, cmap=cmap, annot=formatted_annotations,\n",
@@ -668,6 +673,7 @@
         "    tick_labels = [format_scientific_for_ticks(10**-tick) for tick in tick_locs]\n",
         "    cbar.set_ticks(tick_locs)\n",
         "    cbar.set_ticklabels(tick_labels)\n",
+        "\n",
         "\n",
         "def cohen_d(group1, group2):\n",
         "    \"\"\"Calculate Cohen's d for measuring effect size between two groups.\"\"\"\n",
@@ -725,11 +731,13 @@
         "    # Get selected conditions\n",
         "    selected_conditions = condition_selector.value\n",
         "    print(f\"Selected conditions: {selected_conditions}\")\n",
+        "    selected_conditions = condition_selector.value\n",
         "    n_selected_conditions = len(selected_conditions)\n",
-        "\n",
         "    if n_selected_conditions == 0:\n",
-        "        print(\"No conditions selected for plotting\")\n",
-        "        return\n",
+        "        print(\"No conditions selected for plotting, therefore all available conditions are selected by default\")\n",
+        "        selected_conditions = df[Conditions].unique().tolist()\n",
+        "\n",
+        "    n_selected_conditions = len(selected_conditions)\n",
         "\n",
         "    # Use only selected and ordered conditions\n",
         "    filtered_df = df[df[Conditions].isin(selected_conditions)].copy()\n",
