--- a/Notebooks/Plot&Stats_BoxPlots.ipynb
+++ b/Notebooks/Plot&Stats_BoxPlots.ipynb
@@ -163,9 +163,11 @@
         "from matplotlib.ticker import FixedLocator\n",
         "from prettytable import PrettyTable\n",
         "import os\n",
+        "from tqdm.notebook import tqdm  # For the progress bar in save_dataframe_with_progress\n",
+        "\n",
         "\n",
         "# Current version of the notebook the user is running\n",
-        "current_version = \"0.2\"\n",
+        "current_version = \"0.3\"\n",
         "Notebook_name = 'BoxPlots'\n",
         "\n",
         "# URL to the raw content of the version file in the repository\n",
@@ -446,6 +448,9 @@
         "import ipywidgets as widgets  # Ensure we have the required widgets module imported\n",
         "import pandas as pd\n",
         "\n",
+        "save_path = os.path.join(Results_Folder, 'dataset_df.csv')\n",
+        "\n",
+        "\n",
         "def single_stage_column_mapping(df):\n",
         "    # Define the columns we need to map: Condition, Repeat\n",
         "    mappings = {\n",
@@ -492,12 +497,124 @@
         "        # Update the global dataset_df with the new mappings\n",
         "        global dataset_df\n",
         "        dataset_df = new_df\n",
+        "        save_dataframe_with_progress(dataset_df, save_path)\n",
+        "\n",
         "\n",
         "    confirm_button.on_click(confirm_mappings)\n",
         "    display(confirm_button)\n",
         "\n",
-        "single_stage_column_mapping(dataset_df)\n"
+        "single_stage_column_mapping(dataset_df)\n",
+        "\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **1.5. Normalize your data (optional)**\n",
+        "\n",
+        "This cell below normalizes the numerical columns in your dataset by dividing each value by the average of a selected control condition within each repeat. To use it, select your desired control condition from the dropdown menu. The normalized values will be added to your dataset and saved automatically.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "F6racjS2a316"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@markdown ##Normalise your dataset:\n",
+        "\n",
+        "\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import ipywidgets as widgets\n",
+        "from IPython.display import display, clear_output\n",
+        "\n",
+        "save_path = os.path.join(Results_Folder, 'dataset_df.csv')\n",
+        "\n",
+        "\n",
+        "\n",
+        "# Create a dropdown widget for selecting the control condition\n",
+        "unique_conditions = dataset_df['Condition'].unique()\n",
+        "control_dropdown = widgets.Dropdown(\n",
+        "    options=unique_conditions,\n",
+        "    description='Select Control Condition:',\n",
+        "    value=unique_conditions[0],\n",
+        "    style={'description_width': 'initial'}\n",
+        ")\n",
+        "\n",
+        "# Function to normalize data based on selected control condition\n",
+        "def normalize_data(control_condition):\n",
+        "    global dataset_df  # Declare dataset_df as global to modify it\n",
+        "\n",
+        "    # Ensure 'Condition' and 'Repeat' are treated as strings\n",
+        "    dataset_df['Condition'] = dataset_df['Condition'].astype(str)\n",
+        "    dataset_df['Repeat'] = dataset_df['Repeat'].astype(str)\n",
+        "\n",
+        "    # Step 2: Identify numerical columns excluding 'Condition' and 'Repeat'\n",
+        "    numerical_columns = dataset_df.select_dtypes(include=[np.number]).columns.tolist()\n",
+        "    columns_to_normalize = [col for col in numerical_columns if col not in ['Condition', 'Repeat']]\n",
+        "\n",
+        "    # Remove previous control mean and normalized columns if they exist\n",
+        "    control_mean_cols = [col + '_control_mean' for col in columns_to_normalize]\n",
+        "    norm_cols = [col + ' norm' for col in columns_to_normalize]\n",
+        "    cols_to_drop = [col for col in control_mean_cols + norm_cols if col in dataset_df.columns]\n",
+        "    if cols_to_drop:\n",
+        "        dataset_df.drop(columns=cols_to_drop, inplace=True)\n",
+        "\n",
+        "    # Step 3: Compute control means for each 'Repeat'\n",
+        "    control_means = (\n",
+        "        dataset_df[dataset_df['Condition'] == control_condition]\n",
+        "        .groupby('Repeat')[columns_to_normalize]\n",
+        "        .mean()\n",
+        "        .reset_index()\n",
+        "    )\n",
+        "\n",
+        "    # Rename columns to indicate they are control means\n",
+        "    control_mean_columns = {col: col + '_control_mean' for col in columns_to_normalize}\n",
+        "    control_means.rename(columns=control_mean_columns, inplace=True)\n",
+        "\n",
+        "    # Step 4: Merge control means back to dataset_df\n",
+        "    dataset_df = dataset_df.merge(control_means, on='Repeat', how='left')\n",
+        "\n",
+        "    # Step 5: Normalize and create new columns\n",
+        "    for col in columns_to_normalize:\n",
+        "        control_mean_col = col + '_control_mean'\n",
+        "        norm_col = col + ' norm'\n",
+        "        dataset_df[norm_col] = dataset_df[col] / dataset_df[control_mean_col]\n",
+        "\n",
+        "    # Optionally, drop control mean columns if no longer needed\n",
+        "    # dataset_df.drop(columns=control_mean_cols, inplace=True)\n",
+        "\n",
+        "    # Display the updated DataFrame\n",
+        "    clear_output()\n",
+        "    display(control_dropdown)\n",
+        "    display(dataset_df.head())\n",
+        "    save_dataframe_with_progress(dataset_df, save_path)\n",
+        "\n",
+        "# Link the dropdown widget to the normalization function\n",
+        "def on_change(change):\n",
+        "    if change['type'] == 'change' and change['name'] == 'value':\n",
+        "        normalize_data(change['new'])\n",
+        "\n",
+        "control_dropdown.observe(on_change)\n",
+        "\n",
+        "# Display the dropdown widget\n",
+        "display(control_dropdown)\n",
+        "\n",
+        "# Initial normalization with default selection\n",
+        "normalize_data(control_dropdown.value)\n",
+        "\n"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "nw-3KC1_TzQx"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1905,10 +2022,19 @@
         "  - This notebook may contain bugs.\n",
         "  - Features are currently limited and will be expanded in future releases.\n",
         "\n",
-        "<font size = 4>We encourage users to report any issues or suggestions for improvement. Please check the [repository](https://github.com/guijacquemet/CellTracksColab) regularly for updates and the latest version of this notebook.\n",
+        "<font size = 4>We encourage users to report any issues or suggestions for improvement.\n",
         "\n",
+        "<font size = 4>**Version 0.3**\n",
+        "\n",
+        "Added the possibility to normalise the dataset\n",
+        "\n",
+        "\n",
+        "<font size = 4>**Version 0.2**\n",
+        "\n",
+        "Various bug fixes and improvements\n",
         "\n",
         "<font size = 4>**Version 0.1**\n",
+        "\n",
         "This is the first release of this notebook.\n",
         "\n",
         "---"
