--- a/Notebooks/Plot&Stats_BoxPlots.ipynb
+++ b/Notebooks/Plot&Stats_BoxPlots.ipynb
@@ -167,7 +167,7 @@
         "\n",
         "\n",
         "# Current version of the notebook the user is running\n",
-        "current_version = \"0.3\"\n",
+        "current_version = \"0.4\"\n",
         "Notebook_name = 'BoxPlots'\n",
         "\n",
         "# URL to the raw content of the version file in the repository\n",
@@ -681,6 +681,8 @@
         "from matplotlib.gridspec import GridSpec\n",
         "from scipy import stats\n",
         "import time\n",
+        "from matplotlib.ticker import FixedLocator\n",
+        "\n",
         "\n",
         "# Parameters to adapt in function of the notebook section\n",
         "base_folder = f\"{Results_Folder}/Plots\"  # Change to your actual folder path\n",
@@ -768,7 +770,7 @@
         "    # Format annotations if conditions are 6 or fewer\n",
         "    num_conditions = len(matrix.columns)\n",
         "    if num_conditions <= 7:\n",
-        "        formatted_annotations = matrix.applymap(lambda x: format_p_value(x) if pd.notna(x) else \"NaN\")\n",
+        "        formatted_annotations = matrix.map(lambda x: format_p_value(x) if pd.notna(x) else \"NaN\")\n",
         "    else:\n",
         "        formatted_annotations = False  # No annotations\n",
         "\n",
@@ -802,25 +804,54 @@
         "    d = diff / np.sqrt(pooled_var)\n",
         "    return d\n",
         "\n",
-        "def perform_randomization_test(df, cond1, cond2, var, n_iterations=1000):\n",
-        "    \"\"\"Perform a randomization test using Cohen's d as the effect size metric.\"\"\"\n",
-        "    group1 = df[df['Condition'] == cond1][var]\n",
-        "    group2 = df[df['Condition'] == cond2][var]\n",
+        "def perform_randomization_test(df, cond1, cond2, var, n_iterations=10000, debug=False):\n",
+        "    \"\"\"\n",
+        "    Perform a randomization test using Cohen's d as the effect size metric.\n",
+        "    Includes debugging and handles NaN values in the data.\n",
+        "    \"\"\"\n",
+        "    group1 = df[df['Condition'] == cond1][var].dropna().values\n",
+        "    group2 = df[df['Condition'] == cond2][var].dropna().values\n",
+        "\n",
+        "    # Check if either group is empty after removing NaNs\n",
+        "    if len(group1) == 0 or len(group2) == 0:\n",
+        "        raise ValueError(\"One or both groups are empty after removing NaN values.\")\n",
+        "\n",
+        "    # Calculate observed effect size\n",
         "    observed_effect_size = cohen_d(group1, group2)\n",
         "    combined = np.concatenate([group1, group2])\n",
+        "    n_group1 = len(group1)\n",
         "    count_extreme = 0\n",
-        "    # Perform the randomization test\n",
-        "    for i in range(n_iterations):\n",
-        "      if i % 100 == 0:\n",
-        "        np.random.shuffle(combined)\n",
-        "        new_group1 = combined[:len(group1)]\n",
-        "        new_group2 = combined[len(group1):]\n",
-        "        new_effect_size = cohen_d(new_group1, new_group2)\n",
-        "      if abs(new_effect_size) >= abs(observed_effect_size):\n",
-        "          count_extreme += 1\n",
+        "    randomized_effect_sizes = []\n",
         "\n",
+        "    if debug:\n",
+        "        print(f\"Observed Cohen's d: {observed_effect_size}\")\n",
+        "        print(f\"Group 1 (n={n_group1}): {group1}\")\n",
+        "        print(f\"Group 2 (n={len(group2)}): {group2}\")\n",
+        "\n",
+        "    # Perform the randomization test\n",
+        "    for _ in range(n_iterations):\n",
+        "        np.random.shuffle(combined)\n",
+        "        rand_group1 = combined[:n_group1]\n",
+        "        rand_group2 = combined[n_group1:]\n",
+        "        rand_effect_size = cohen_d(rand_group1, rand_group2)\n",
+        "        randomized_effect_sizes.append(rand_effect_size)\n",
+        "\n",
+        "        if abs(rand_effect_size) >= abs(observed_effect_size):\n",
+        "            count_extreme += 1\n",
+        "\n",
+        "    # Calculate p-value\n",
         "    p_value = (count_extreme + 1) / (n_iterations + 1)\n",
+        "\n",
+        "    if debug:\n",
+        "        print(f\"Randomized Effect Sizes (first 10): {randomized_effect_sizes[:10]}\")\n",
+        "        plt.hist(randomized_effect_sizes, bins=30, alpha=0.7, label=\"Randomized Effect Sizes\")\n",
+        "        plt.axvline(observed_effect_size, color=\"red\", linestyle=\"dashed\", linewidth=2, label=\"Observed Effect Size\")\n",
+        "        plt.title(f\"Randomization Test for {var}\")\n",
+        "        plt.legend()\n",
+        "        plt.show()\n",
+        "\n",
         "    return p_value\n",
+        "\n",
         "\n",
         "def perform_t_test(df, cond1, cond2, var):\n",
         "    \"\"\"Perform a t-test using the average of each repeat for the given conditions and calculate Cohen's d.\"\"\"\n",
@@ -862,7 +893,7 @@
         "    unique_conditions = filtered_df[Conditions].unique().tolist()\n",
         "    print(f\"Unique conditions: {unique_conditions}\")\n",
         "    num_comparisons = len(unique_conditions) * (len(unique_conditions) - 1) // 2\n",
-        "    n_iterations = 1000\n",
+        "    n_iterations = 10000\n",
         "    method = stat_method_selector.value\n",
         "    print(f\"Selected method: {method}\")\n",
         "\n",
@@ -872,9 +903,9 @@
         "\n",
         "    for var in variables_to_plot:\n",
         "        print(f\"Processing variable: {var}\")\n",
-        "        effect_size_matrices[var] = pd.DataFrame(0, index=unique_conditions, columns=unique_conditions)\n",
-        "        p_value_matrices[var] = pd.DataFrame(1, index=unique_conditions, columns=unique_conditions)\n",
-        "        bonferroni_matrices[var] = pd.DataFrame(1, index=unique_conditions, columns=unique_conditions)\n",
+        "        effect_size_matrices[var] = pd.DataFrame(0, index=unique_conditions, columns=unique_conditions, dtype=float)\n",
+        "        p_value_matrices[var] = pd.DataFrame(1, index=unique_conditions, columns=unique_conditions, dtype=float)\n",
+        "        bonferroni_matrices[var] = pd.DataFrame(1, index=unique_conditions, columns=unique_conditions, dtype=float)\n",
         "\n",
         "        for cond1, cond2 in itertools.combinations(unique_conditions, 2):\n",
         "            group1 = filtered_df[filtered_df[Conditions] == cond1][var]\n",
@@ -2023,6 +2054,10 @@
         "  - Features are currently limited and will be expanded in future releases.\n",
         "\n",
         "<font size = 4>We encourage users to report any issues or suggestions for improvement.\n",
+        "\n",
+        "<font size = 4>**Version 0.4**\n",
+        "\n",
+        "Randomization test now handles NaN\n",
         "\n",
         "<font size = 4>**Version 0.3**\n",
         "\n",
