--- a/Notebooks/Plot&Stats_BoxPlots.ipynb
+++ b/Notebooks/Plot&Stats_BoxPlots.ipynb
@@ -1062,10 +1062,10 @@
         "            grouped_stats = df.groupby(Conditions)[var].describe()\n",
         "            variance = df.groupby(Conditions)[var].var().rename('variance')\n",
         "            skewness = df.groupby(Conditions)[var].skew().rename('skewness')\n",
-        "            kurtosis = df.groupby(Conditions)[var].apply(pd.DataFrame.kurt).rename('kurtosis')\n",
+        "            #kurtosis = df.groupby(Conditions)[var].apply(pd.DataFrame.kurt).rename('kurtosis')\n",
         "\n",
         "            # Concatenate all statistics into a single DataFrame\n",
-        "            all_stats = pd.concat([grouped_stats, variance, skewness, kurtosis], axis=1)\n",
+        "            all_stats = pd.concat([grouped_stats, variance, skewness], axis=1)\n",
         "\n",
         "            # Save the summary to a CSV file\n",
         "            csv_filename = f\"{var}_summary.csv\"\n",
@@ -1086,6 +1086,47 @@
         "\n",
         "generate_display_and_save_statistics(df_to_plot, selectable_columns, Conditions, save_path)\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# @title ##Zip the results in the content folder for easy download\n",
+        "\n",
+        "import os\n",
+        "import shutil\n",
+        "from zipfile import ZipFile\n",
+        "\n",
+        "def zip_folder(folder_path, zip_file_name):\n",
+        "    \"\"\"Zips the specified folder and its contents.\"\"\"\n",
+        "    try:\n",
+        "        with ZipFile(zip_file_name, 'w') as zipf:\n",
+        "            for foldername, subfolders, filenames in os.walk(folder_path):\n",
+        "                for filename in filenames:\n",
+        "                    file_path = os.path.join(foldername, filename)\n",
+        "                    arcname = os.path.relpath(file_path, folder_path)\n",
+        "                    zipf.write(file_path, arcname)\n",
+        "        print(f\"Successfully created '{zip_file_name}'\")\n",
+        "    except FileNotFoundError:\n",
+        "        print(f\"Error: Folder '{folder_path}' not found.\")\n",
+        "    except Exception as e:\n",
+        "        print(f\"An error occurred: {e}\")\n",
+        "\n",
+        "# Assuming Results_Folder is defined in your previous code\n",
+        "results_folder_path = \"/content/Results\"\n",
+        "zip_file_name = os.path.join(\"/content\", \"Results.zip\")\n",
+        "\n",
+        "# Check if the folder exists before zipping\n",
+        "if os.path.exists(results_folder_path):\n",
+        "    zip_folder(results_folder_path, zip_file_name)\n",
+        "else:\n",
+        "    print(f\"The folder '{results_folder_path}' does not exist.\")\n"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "Lxtj8o9TrW_y"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
